[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Images/Fonts/orbitron_light_8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/HUD/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Fonts/orbitron_mainmenu.tres" type="DynamicFont" id=3]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 1 )

[node name="PauseMenu" type="ViewportContainer"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
stretch = true
stretch_shrink = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Pause", "Rect", "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MenuContainer" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 361.0
margin_top = 220.0
margin_right = 663.0
margin_bottom = 380.0
rect_min_size = Vector2( 302, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Continue" type="Button" parent="MenuContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 314.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.691406, 0.691406, 0.691406, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continue"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MainMenu" type="Button" parent="MenuContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 314.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.691406, 0.691406, 0.691406, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="LoadGame" type="Button" parent="MenuContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 314.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Game"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="Button" parent="MenuContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 314.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="MenuContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 200.0
margin_right = 314.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="MenuContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]


